--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,30 +1,39 @@
 @inproceedings{Lim2016,
-  title={지식베이스 확장을 위한 자동 관계 추출},
+  title={Automatic Relation Extraction for Knowledge Base Population},
   author={Seongwoo Lim and Jiyeon Han and Kyowoon Lee and Jaesik Choi},
-  year={2016},
-  url={https://api.semanticscholar.org/CorpusID:184632648}
-}
+  journal={Communications of the Korean Institute of Information Scientists and Engineers},
+  volume={34},
+  number={9},
+  pages={39--46},
+  year={2016}
 
 @article{Lim2016SAILT,
   title={SAIL (UNIST) team Participation in KBP 2016 Cold-Start Slot filling},
   author={Seongwoo Lim and Jiyeon Han and Kyowoon Lee and Jaesik Choi},
-  journal={Theory and Applications of Categories},
+  booktitle={Proceedings of the Text Analysis Conference (TAC) KBP 2016 Workshop},
   year={2016},
-  url={https://api.semanticscholar.org/CorpusID:46896888}
+  organization={NIST}
 }
 
 @article{Lim2017UNISTSS,
   title={UNIST SAIL System for TAC 2017 Cold Start Slot Filling},
   author={Seongwoo Lim and Soonjae Kwon and Sehyun Lee and Jaesik Choi},
-  journal={Theory and Applications of Categories},
-  year={2017},
-  url={https://api.semanticscholar.org/CorpusID:44156911}
+  booktitle={Proceedings of the Text Analysis Conference (TAC) KBP 2016 Workshop},
+  year={2016},
+  organization={NIST}
 }
 
-@inproceedings{Lim2025PathwiseEO,
-  title={Pathwise Explanation of ReLU Neural Networks},
-  author={Seongwoo Lim and Won Jo and Joohyung Lee and Jaesik Choi},
-  booktitle={International Conference on Artificial Intelligence and Statistics},
-  year={2025},
-  url={https://api.semanticscholar.org/CorpusID:269648570}
+@InProceedings{pmlr-v238-lim24a,
+  title     = {Pathwise Explanation of {ReLU} Neural Networks},
+  author    = {Lim, Seongwoo and Jo, Won and Lee, Joohyung and Choi, Jaesik},
+  booktitle = {Proceedings of The 27th International Conference on Artificial Intelligence and Statistics},
+  pages     = {4645--4653},
+  year      = {2024},
+  editor    = {Dasgupta, Sanjoy and Mandt, Stephan and Li, Yingzhen},
+  volume    = {238},
+  series    = {Proceedings of Machine Learning Research},
+  month     = {May},
+  publisher = {PMLR},
+  pdf       = {https://proceedings.mlr.press/v238/lim24a/lim24a.pdf},
+  url       = {https://proceedings.mlr.press/v238/lim24a.html}
 }
