--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -23,7 +23,7 @@
   organization={NIST}
 }
 
-@InProceedings{pmlr-v238-lim24a,
+@inproceedings{pmlr-v238-lim24a,
   title     = {Pathwise Explanation of {ReLU} Neural Networks},
   author    = {Lim, Seongwoo and Jo, Won and Lee, Joohyung and Choi, Jaesik},
   booktitle = {Proceedings of The 27th International Conference on Artificial Intelligence and Statistics},
