--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,14 +1,14 @@
 @inproceedings{Lim2016,
   title={Automatic Relation Extraction for Knowledge Base Population},
   author={Seongwoo Lim and Jiyeon Han and Kyowoon Lee and Jaesik Choi},
-  journal={Communications of the Korean Institute of Information Scientists and Engineers},
+  booktitle={Communications of the Korean Institute of Information Scientists and Engineers},
   volume={34},
   number={9},
   pages={39--46},
   year={2016}
 }
 
-@article{Lim2016SAILT,
+@inproceedings{Lim2016SAILT,
   title={SAIL (UNIST) team Participation in KBP 2016 Cold-Start Slot filling},
   author={Seongwoo Lim and Jiyeon Han and Kyowoon Lee and Jaesik Choi},
   booktitle={Proceedings of the Text Analysis Conference (TAC) KBP 2016 Workshop},
@@ -16,7 +16,7 @@
   organization={NIST}
 }
 
-@article{Lim2017UNISTSS,
+@inproceedings{Lim2017UNISTSS,
   title={UNIST SAIL System for TAC 2017 Cold Start Slot Filling},
   author={Seongwoo Lim and Soonjae Kwon and Sehyun Lee and Jaesik Choi},
   booktitle={Proceedings of the Text Analysis Conference (TAC) KBP 2017 Workshop},
